#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([Patrol_algorithm], [1.0], [https://github.com/freeeyes/Patrol_algorithm])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([Patrol_algorithm.cpp])
AC_CONFIG_SRCDIR([UserRoute.cpp])
AC_CONFIG_SRCDIR([Route_Common.cpp])
AC_CONFIG_SRCDIR([RouteInfo.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.
AC_CHECK_FUNCS([pow sqrt])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
